Fixed various bugs
Took 38 minutes